# accretion

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum  main.go
api/: api.go
client/profile/: BUILD.bazel  device.hpp  graph.hpp  profile.cpp  profile.hpp
client/profile/src/: graph.cpp
data/: blob.go  data.go  database.go  schema.dql  txn.go
examples/: BUILD.bazel  profile_mlp_grad.py
proto/: BUILD.bazel  buf.gen.yaml  profile.pb.go  profile.proto  profile_grpc.pb.go
proto/internal/onnx/: onnx.pb.go  onnx.proto
proto/onnx/: onnx.pb.go
proto/profile/: profile.pb.go  profile.pb.gw.go  profile.proto  profile_grpc.pb.go
proto/storage/: storage.pb.go  storage.proto
service/: service.go
